bugfix: add append attribute to allow multiple attaches to the same block

--- a/templates/welcome/welcome.html
+++ b/templates/welcome/welcome.html
@@ -1,4 +1,4 @@
-{block name="extra-panel"}
+{block name="extra-panel" append}
     <table class="lmsbox" id="lms-ui-welcome-box-tauron">
         <thead>
             <tr onclick="showOrHide('welcome_tauron');">
